Fixed images on mobile

--- a/style/home.css
+++ b/style/home.css
@@ -1,16 +1,16 @@
 .content{display:flex;flex-direction:column;align-items:center}
 .homepagebigtext{color:#ddd;font-size:45px;max-width:90vw;margin-bottom:40px;margin-top:20px;width:1200px;font-weight:400}
 .homepagebigtext span{font-weight:700}
-.homepagebuttons{max-width:90vw;width:600px;justify-content:center;display:flex;margin-bottom:100px;z-index:1}
+.homepagebuttons{max-width:90vw;width:600px;justify-content:center;display:flex;margin-bottom:1px;z-index:1}
 .homepagebuttons a:nth-child(1){background:rgba(0,0,0,.2);margin-right:10px}
 .homepagebuttons a:nth-child(2){background:#3419bd;margin-left:10px}
 .homepagebuttons a:hover:nth-child(1){background:rgba(0,0,0,.1)}
 .homepagebuttons a:hover:nth-child(2){background:#3419bd}
-.homepagebuttons a{padding:20px 30px;border-radius:30px;transition:background .4s;font-weight:700;font-size:1.05em}
+.homepagebuttons a{padding:50px 60px;border-radius:30px;transition:background .4s;font-weight:700;font-size:1.05em;margin-bottom:-60px;}
 .videoframe{width:1050px;max-width:90%;height:500px;margin:50px 0;z-index:0}
 .features{margin-top:150px}
-.brands{margin-top:100px;display:flex;align-items:center;flex-wrap:wrap;justify-content:center;z-index:1}
-.brands>img{margin:10px;min-height:0}
+.brands{margin-top:100px;display:flex;align-items:center;flex-wrap:wrap;justify-content:center;z-index:1;width: 100%;height: 100%;position:relative;}
+.brands>img{margin:20px;min-height:75px}
 .homepageicon{margin-bottom:25px;width:85px}
 .homepagetitletext{font-size:28px;margin-bottom:75px;font-weight:500;max-width:95vw}
 .featurecontainer{display:grid;grid-template-columns:32% 32% 32%;column-gap:2%;width:1400px;max-width:90vw;perspective:1000px}
@@ -45,7 +45,7 @@
     .contact>div>div>div>input{outline:none;border:none;background:#31273b;padding:20px;font-size:15px;color:#fff;border-radius:10px;width:450px;max-width:100%;text-align:left}.contact>div>div>div>textarea{outline:none;border:none;resize:none;background:#31273b;padding:20px;font-size:15px;color:#fff;border-radius:10px;width:550px;max-width:calc(100% - 40px);text-align:left}.contact>div>div>div>span{cursor:pointer;background:#372f40;padding:20px 40px;text-transform:uppercase;border-radius:30px;font-weight:500;margin-top:35px;-webkit-align-self:flex-end;-ms-flex-item-align:end;align-self:flex-end;-webkit-transition:.3s all ease-out 0s;transition:.3s all ease-out 0s}
 @media only screen and (max-width:1300px){.contact>div>div{flex-direction:column;align-items:center}.contact>div>div>div{width:100%}.contact div>div>div:nth-child(1){margin-right:0}.contact>div>div>div>input{width:calc(100% - 40px);margin-bottom:15px}.contact>div>div>div>span{margin-bottom:0}}
 @media only screen and (max-width:800px){.successtop{background:url(/images/saferesponsive.png);background-position:center;background-repeat:no-repeat;background-size:contain}.homepagebuttons{margin-bottom:0}
-.brands{margin-top:0}
+.brands{margin-top:10}
 .videoframe{margin:0}
 .features{margin-top:80px}
 .success{margin-top:80px;margin-bottom:80px}
